high contrast fixed on banner photos for events and homepage

--- a/app/css/less/accessibility.less
+++ b/app/css/less/accessibility.less
@@ -73,34 +73,46 @@ div:focus {
 
 @media screen and (-ms-high-contrast: active) {
   /* All high contrast styling rules */
-  .lightBlueBackground {
-		border-top: dashed !important;
-		border-bottom: dashed !important;
-		border-right: dashed !important;
-		border-left: dashed !important;
-		border-width: 3px;
-	}
-
-		.lightGreenBackground {
-	  border-width: 3px;
-	  border-top: dotted !important;
-	  border-bottom: dotted !important;
-	  border-right: dotted !important;
-	  border-left: dotted !important;
-
-	}
-	
-	.lightOrangeBackground {
-	  border-top: double !important;
-	  border-bottom: double !important;
-	  border-right: double !important;
-	  border-left: double !important;
-	  border-width: 3px;
-	}
-
- 	#emailIcon {
- 	  outline-style: solid !important;
- 	  outline-color: #fff !important;
- 	}
+	 main {
+		 .banner {
+			background-image: url('img/Paris2016-bw.jpg') !important;
+			.gradient {
+				background: none;
+				h1, h3 {
+					background-color: #000;
+					// width: 400px;
+				}
+			}
+		 }
+		 .eventsBanner {
+			 background-image: url('img/Paris2016-2-bw.jpg');
+			 .gradient {
+				 background: none;
+				 h1 {
+					 background-color: #000;
+				 }
+			 }
+		 }
+	 }
 
 }
+
+@media screen and (-ms-high-contrast: black-on-white) {
+	main {
+		.banner {
+			.gradient {
+				h1, h3 {
+					background-color: #fff;
+				}
+			}
+		}
+		.eventsBanner {
+			.gradient {
+				h1, h3 {
+					background-color: #fff;
+				}
+			}
+		}
+	}
+}
+	
